--- a/Genshin Impact/nbproject/private/private.properties
+++ b/Genshin Impact/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\acer\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
+user.properties.file=C:\\Users\\lalit\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
