--- a/Genshin Impact/nbproject/private/private.properties
+++ b/Genshin Impact/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\acer\\AppData\\Roaming\\NetBeans\\8.2rc\\build.properties
+user.properties.file=C:\\Users\\lalit\\AppData\\Roaming\\NetBeans\\12.2\\build.properties
